--- a/eventapi/html/allevents/einstein190814.html
+++ b/eventapi/html/allevents/einstein190814.html
@@ -42,30 +42,26 @@
         <section class="portfolio-block block-intro border-bottom">
             <div class="container text-center">
                 <div class="about-me">
-                    <p style="font-family: 'Abril Fatface', cursive;">Catalogue</p>
+                    <p style="font-family: 'Abril Fatface', cursive;">EINSTEIN<strong>190814</strong><br></p>
                 </div>
             </div>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
-                            <th><a class="btn btn-primary" role="button" href="einstein190814.html">EINSTEIN190814<br></a></th>
-                            <th><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 521</a></th>
+                            <th class="text-left" style="width: 761px;"><br>GraceDB:&nbsp;<a href="https://gracedb.ligo.org/superevents/S190814bv">S190814bv</a><br></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 520</a></td>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 425</a></td>
+                            <td class="text-left"><strong>GCN:</strong>&nbsp;<a href="https://gcn.gsfc.nasa.gov/notices_l/S190814bv.lvc"><strong>Notices</strong></a><strong>&nbsp;•&nbsp;</strong><a href="https://gcn.gsfc.nasa.gov/other/GW190814bv.gcn3"><strong>Circulars</strong></a><br></td>
                         </tr>
                         <tr>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 412</a></td>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 414</a></td>
+                            <td class="text-left"><a href="https://www.gw-openscience.org/o3_eventdata_docs/">Documentation</a><br></td>
                         </tr>
                     </tbody>
                 </table>
-            </div>
-        </section>
+            </div><img src="https://www.gw-openscience.org/static/images/thumbnails/new_thumbs/O3_Discovery_Papers/GW190814-v1-H1-qscan.png"></section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
     <footer
