--- a/eventapi/html/allevents/catalogue/einstein190814.html
+++ b/eventapi/html/allevents/catalogue/einstein190814.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>CV - Brand</title>
     <meta name="description" content="GW EINSTEIN">
-    <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="icon" type="image/png" sizes="551x894" href="../assets/img/PngItem_2522307.png">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alex+Brush">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arizonia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bigshot+One">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sriracha">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="../assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="assets/css/Social-Icons.css">
+    <link rel="stylesheet" href="../assets/css/Social-Icons.css">
 </head>
 
 <body>
@@ -42,30 +42,37 @@
         <section class="portfolio-block block-intro border-bottom">
             <div class="container text-center">
                 <div class="about-me">
-                    <p style="font-family: 'Abril Fatface', cursive;">Catalogue</p>
+                    <p style="font-family: 'Abril Fatface', cursive;">EINSTEIN<strong>190814</strong><br></p>
                 </div>
             </div>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
-                            <th><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN190814<br></a></th>
-                            <th><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 521</a></th>
+                            <th class="text-left" style="width: 761px;"><br>GraceDB:&nbsp;<a href="https://gracedb.ligo.org/superevents/S190814bv">S190814bv</a><br></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 520</a></td>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 425</a></td>
+                            <td class="text-left"><strong>GCN:</strong>&nbsp;<a href="https://gcn.gsfc.nasa.gov/notices_l/S190814bv.lvc"><strong>Notices</strong></a><strong>&nbsp;•&nbsp;</strong><a href="https://gcn.gsfc.nasa.gov/other/GW190814bv.gcn3"><strong>Circulars</strong></a><br></td>
                         </tr>
+                        <tr></tr>
                         <tr>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 412</a></td>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 414</a></td>
+                            <td class="text-left"><a href="https://www.gw-openscience.org/o3_eventdata_docs/">Documentation</a><br></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-        </section>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="text-left"><a href="http://treasuremap.space/alerts?graceids=S190814bv" target="_blank">Treasure Maps</a></th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div><img src="https://www.gw-openscience.org/static/images/thumbnails/new_thumbs/O3_Discovery_Papers/GW190814-v1-H1-qscan.png"></section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
     <footer
@@ -75,12 +82,12 @@
             <div class="social-icons"></div>
         </div>
         </footer>
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/bs-init.js"></script>
+        <script src="../assets/js/jquery.min.js"></script>
+        <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="../assets/js/bs-init.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-        <script src="assets/js/theme.js"></script>
+        <script src="../assets/js/theme.js"></script>
 </body>
 
 </html>
