--- a/eventapi/html/allevents/catalogue/einstein190814.html
+++ b/eventapi/html/allevents/catalogue/einstein190814.html
@@ -72,7 +72,11 @@
                     </thead>
                     <tbody></tbody>
                 </table>
-            </div><img src="https://www.gw-openscience.org/static/images/thumbnails/new_thumbs/O3_Discovery_Papers/GW190814-v1-H1-qscan.png"></section>
+            </div><img src="https://www.gw-openscience.org/static/images/thumbnails/new_thumbs/O3_Discovery_Papers/GW190814-v1-H1-qscan.png">
+            <div class="container">
+                <p>05/10/2020</p>
+            </div>
+        </section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
     <footer
