--- a/eventapi/html/allevents/catalogue/einstein190814.html
+++ b/eventapi/html/allevents/catalogue/einstein190814.html
@@ -74,6 +74,9 @@
                 </table>
             </div><img src="https://www.gw-openscience.org/static/images/thumbnails/new_thumbs/O3_Discovery_Papers/GW190814-v1-H1-qscan.png">
             <div class="container">
+                <p>Sky Localization<br></p>
+            </div><img src="https://gracedb.ligo.org/api/superevents/S190814bv/files/GW190814_skymap.png,0">
+            <div class="container">
                 <p>05/10/2020</p>
             </div>
         </section>
