--- a/eventapi/html/allevents/catalogue/einstein190814.html
+++ b/eventapi/html/allevents/catalogue/einstein190814.html
@@ -74,10 +74,10 @@
                 </table>
             </div><img src="https://www.gw-openscience.org/static/images/thumbnails/new_thumbs/O3_Discovery_Papers/GW190814-v1-H1-qscan.png">
             <div class="container">
-                <p>Sky Localization<br></p>
+                <p class="text-center">Sky Localization<br></p>
             </div><img src="https://gracedb.ligo.org/api/superevents/S190814bv/files/GW190814_skymap.png,0">
             <div class="container">
-                <p>05/10/2020</p>
+                <p class="text-center" style="font-size: 15px;">manually uploading <br>GW190814_skymap.png&nbsp;Submitted by Shaon Ghosh on June 25, 2020 17:19:45 UTC<br></p>
             </div>
         </section>
     </main>
