--- a/eventapi/html/allevents/games.html
+++ b/eventapi/html/allevents/games.html
@@ -27,13 +27,13 @@
             <div
                 class="collapse navbar-collapse" id="navbarNav" style="font-family: Sriracha, cursive;">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../project.html">Project</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org" target="_blank">LSC</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu" target="_blank">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/" target="_blank">GWOSC<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../contact.html">Contact with us<br></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../aboutus.html"><strong>About us</strong><br></a></li>
                 </ul>
         </div>
         </div>
@@ -46,6 +46,28 @@
                 </div>
             </div>
             <div class="container text-center"><button class="btn btn-primary" type="button" style="font-size: 32px;">Play Now</button></div>
+            <p class="text-left"><strong>Gravity Free Games</strong></p>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="text-center">
+                                <div class="container text-center"><img src="assets/img/canvas-rider.jpg" style="width: 480px;height: 316px;"></div><a class="btn btn-primary" role="button" href="http://canvasrider.com/" target="_blank"><strong>Canvas Rider</strong><br></a></th>
+                            <th class="text-center">
+                                <div class="container"><img src="assets/img/chain-reaction.jpg" style="width: 480px;height: 316px;"></div><a class="btn btn-primary" role="button" href="http://yvoschaap.com/chainrxnadvanced/" target="_blank"><strong>Chain Reaction</strong><br></a></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-center">
+                                <div class="container text-center"><img src="assets/img/angry-birds.jpg" style="height: 316px;"></div><a class="btn btn-primary" role="button" href="http://chrome.angrybirds.com/" target="_blank"><strong>Angry Birds</strong><br></a></td>
+                            <td class="text-center">
+                                <div class="container text-center"><img src="assets/img/torus.jpg" style="width: 480px;height: 316px;"></div><a class="btn btn-primary" role="button" href="http://www.benjoffe.com/code/games/torus/" target="_blank"><strong>Torus</strong><br></a></td>
+                        </tr>
+                        <tr></tr>
+                    </tbody>
+                </table>
+            </div>
             <div class="container">
                 <p></p>
             </div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
@@ -54,7 +76,7 @@
     <footer
         class="page-footer">
         <div class="container" style="font-family: Sriracha, cursive;">
-            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
+            <div class="links"><a href="../aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="../contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
         </footer>
