--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -78,7 +78,7 @@
                     </table>
                 </div>
             </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" href="games.html">Download App</a>
+            <div class="container text-center"><a class="btn btn-primary" role="button" href="downloadapp.html">Download App</a>
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
@@ -137,7 +137,7 @@
     </div>
     <footer class="page-footer">
         <div class="container" style="font-family: Sriracha, cursive;">
-            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
+            <div class="links"><a href="../aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="../contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
     </footer>
